# on-seoul

./: .env.example  .env.otel  .env.pgbouncer.example  .gitignore  GEMINI.md  README.md  docker-compose-app.yml  docker-compose-pgbouncer.yml  docker-compose-signoz.yml  docker-compose.yml
on-seoul-agent/: .env.example  README.md  main.py  pyproject.toml
on-seoul-agent/agents/: README.md  _emit.py  _helpers.py  _intake_indexing.py  _onai_gateway.py  _ondata_gateway.py  _redis_gateway.py  _reference_resolution.py  _search_channel_utils.py  analytics_agent.py  answer_agent.py  detail_excerpt.py  graph.py  hydration_node.py  intake_agent.py  nodes.py  retrieval_critic.py  router_agent.py  sql_agent.py  triage_agent.py  vector_agent.py  workflow.py
on-seoul-agent/agents/answer/: __init__.py  agent.py  (+2 more)
on-seoul-agent/core/: cache.py  concurrency.py  config.py  database.py  exceptions.py  langfuse_client.py  logging.py  recent_queries.py  redis.py  rrf.py  telemetry.py
on-seoul-agent/docs/: 2026-06-02-chat-context-retention-guide.md  2026-06-03-scheduled-trigger-template-guide.md  ai-agent-design.md  ai-service-implementation.md  chat-search-persistence.md  hybrid-search-strategy.md  notification-template-api.md  pytest-memory-leak.md
on-seoul-agent/llm/: README.md  client.py  embedder.py  embedding_config.py  extractor.py  generator.py  hyqe.py  tokenizer.py
on-seoul-agent/middleware/: metrics.py
on-seoul-agent/routers/: admin.py  chat.py  embeddings.py  notification.py
on-seoul-agent/schemas/: chat.py  critic.py  embeddings.py  events.py  intake.py  notification.py  retrieval_queries.tsv  search.py  state.py
on-seoul-agent/scripts/: chat_repl.py  ddl_chat_entities.sql  ddl_indexes_on_ai.sql  ddl_indexes_on_data.sql  embed_metadata.py  eval_search.py  extraction_failed.tsv  verify_traces.py
on-seoul-agent/tests/: _answer_support.py  _chat_router_support.py  _graph_support.py  _graph_triage_support.py  _non_retrieve_support.py  conftest.py  helpers.py  test_admin_cache.py  test_ambiguous_node.py  test_analytics_agent.py  test_analytics_search.py  test_answer_adaptive_voice.py  test_answer_agent.py  test_answer_agent_core.py  test_answer_agent_intents.py  test_answer_agent_prompting.py  test_answer_attribute_gap.py  test_answer_cache.py  test_answer_card_consistency.py  test_answer_catalog_fields.py  test_answer_critic_tone_gate.py  test_answer_detail.py  test_answer_node_cards_observation.py  test_answer_operational_detail.py  test_answer_p4_meta_relevance.py  test_answer_p4_qa_regression.py  test_answer_package_contract.py  test_answer_result_quality_integration.py  test_bm25_search.py  test_card_consistency_repro.py  test_card_curation_gaps.py  test_channel_fill.py  test_chat_router.py  test_chat_router_integration.py  test_chat_router_stream.py  test_chat_stream_otel.py  test_compare_parallel_eval.py  test_critic_observability.py  test_critic_schema.py  test_critic_state_slots.py  (+110 more)
on-seoul-agent/tools/: README.md  _result_columns.py  analytics_search.py  bm25_search.py  fetch_detail_content.py  hydrate_services.py  map_search.py  question_search.py  sql_search.py  target_audience.py  tokenizer.py  vector_search.py
(+487 files in other folders)
