[project]
name = "on-seoul-agent"
version = "0.1.0"
description = "AI 서비스(멀티에이전트 오케스트레이션)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "aiolimiter>=1.2.1",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi==0.135.3",
    "google-api-core>=2.30.3",
    "httpx>=0.28.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "openai>=2.31.0",
    "pydantic-settings>=2.13.1",
    "redis>=7.4.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "uvicorn[standard]>=0.44.0",
    # lindera-py: BM25 쿼리 토크나이징용 Rust 기반 한국어 형태소 분석기.
    # PyPI에 소스 배포만 있어 Rust 빌드 환경이 필요하다.
    # 프로덕션 Docker 이미지(Rust toolchain 포함)에서 별도 설치한다:
    #   pip install lindera-py
    # 미설치 환경에서는 llm/tokenizer.py가 공백 분리 폴백을 사용한다.
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# 전체 테스트 세션에 하나의 이벤트 루프를 공유한다.
# "function" 스코프(기본값)는 테스트마다 새 루프를 생성하여 모듈 레벨 AsyncLimiter·SQLAlchemy 엔진
# 싱글턴이 이전 루프 참조를 보유한 채 GC되지 않는 메모리 누수를 유발한다.
asyncio_default_test_loop_scope = "session"
addopts = "-m 'not external_api'"
markers = [
    "external_api: 실제 외부 API를 호출하는 연동 테스트",
]
filterwarnings = [
    # LangGraph 내부 Unix-domain socket / asyncio event loop 미닫힘 경고.
    # 두 경우 모두 langgraph·pytest-asyncio 라이브러리 내부에서 발생하며
    # 프로덕션(단일 이벤트 루프 서버)에는 영향 없는 테스트 전용 현상이다.
    "ignore::ResourceWarning",
]
